# pandaemonium

./: .codecov.yaml  .gitattributes  .gitignore  .golangci.yaml  .pre-commit-config.yaml  AGENTS.md  README.md  go.mod  go.sum
.gemini/: config.yaml  styleguide.md
.github/workflows/: test.yaml  toml-perf-gate.yaml  toml-perf-gate.yml  toml-scan-ci.yaml  toml-scan-ci.yml  toml-test.yaml
cmd/agu/: main.go
cmd/pand/: main.go
docs/codex/: auth.en.md  auth.ja.md
hack/boilerplate/: boilerplate.go.txt
hack/extract-memchr-corpus/: .gitignore  Cargo.toml  README.md
hack/extract-memchr-corpus/src/: main.rs
hack/import-toml-rs/: README.md  import.sh
hack/import-toml-test/: README.md  import.sh
hack/memchr-perf-gate/: main.go  main_test.go  select_amd64_simd.go  select_default.go
hack/toml-perf-gate/: main.go  main_test.go
internal/memchr/: AGENTS.md  README.md  allocs_test.go  api.go  api_dispatch.go  avx2_test.go  avx512_boundary_test.go  avx512_test.go  bench_swar_test.go  bench_test.go  bench_tuning_avx512_test.go  bench_tuning_noavx512_test.go  bench_tuning_test.go  dispatch.go  dispatch_binding_amd64_nosimd_test.go  dispatch_binding_amd64_simd_test.go  dispatch_binding_amd64_v3_test.go  dispatch_binding_amd64_v4_test.go  dispatch_binding_arm64_test.go  dispatch_binding_force_swar_test.go  dispatch_binding_other_test.go  dispatch_default_init.go  dispatch_swar_default.go  dispatch_test.go  doc.go  exhaustive_test.go  fuzz_test.go  golden_test.go  memchr2_arm64.s  memchr3_arm64.s  memchr_amd64.go  memchr_amd64_avx2.s  memchr_amd64_legacy.go  memchr_arm64.go  (+14 more)
(+612 files in other folders)
